--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  font-family: 'Poppins', sans-serif;
   color: white;
+  background-color:#95bdc6 ;
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  width: 300px;
+  height: 30px;
+  margin-bottom: 20px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+}
+
+.generateBtn {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: deepskyblue;
+  color: white;
+  cursor: pointer;
+}
+
+.generateBtn:hover {
+  background-color: #3f8cb5;
+}
+
+.qr-code-container {
+  margin-top: 20px;
+}
+
+.qr-code-container img {
+  width: 200px;
+  height: auto;
 }
